# pipeline-dados

./: pyproject.toml
.github/workflows/: ci.yaml
src/: utils.py
