[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-dados"
version = "0.1.0"
description = "Pipeline de dados com ETL"
authors = [
    { name = "Debora Batista da Silva Paulo" }
]
dependencies = [
    "pandas",
    "pytest",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["src"]